# exercism

rust/: Cargo.toml  default.nix  shell.nix
rust/accumulate/.exercism/: metadata.json
rust/accumulate/src/: lib.rs
rust/acronym/.exercism/: metadata.json
rust/acronym/src/: lib.rs
rust/armstrong-numbers/.exercism/: metadata.json
rust/armstrong-numbers/src/: lib.rs
rust/beer-song/.exercism/: metadata.json
rust/beer-song/src/: lib.rs
rust/book-store/: Cargo.toml
rust/book-store/.exercism/: metadata.json
rust/book-store/src/: lib.rs
rust/circular-buffer/.exercism/: metadata.json
rust/circular-buffer/src/: lib.rs
rust/clock/.exercism/: metadata.json
rust/clock/src/: lib.rs
rust/difference-of-squares/.exercism/: metadata.json
rust/difference-of-squares/src/: lib.rs
rust/dot-dsl/.exercism/: metadata.json
rust/dot-dsl/src/: lib.rs
rust/dot-dsl/tests/: dot-dsl.rs
rust/etl/.exercism/: metadata.json
rust/etl/src/: lib.rs
rust/forth/: Cargo.toml
rust/forth/.exercism/: metadata.json
rust/forth/src/: lib.rs
rust/gigasecond/.exercism/: metadata.json
rust/grains/.exercism/: metadata.json
rust/grains/src/: lib.rs
rust/hello-world/.exercism/: metadata.json
rust/leap/.exercism/: metadata.json
rust/macros/.exercism/: metadata.json
rust/macros/src/: lib.rs
rust/macros/tests/: macros.rs
rust/minesweeper/: Cargo.toml
rust/minesweeper/.exercism/: metadata.json
rust/minesweeper/src/: lib.rs
rust/nix/: sources.json
rust/nth-prime/.exercism/: metadata.json
rust/nth-prime/src/: lib.rs
rust/ocr-numbers/: Cargo.toml
rust/ocr-numbers/.exercism/: metadata.json
rust/parallel-letter-frequency/: Cargo.toml
rust/prime-factors/: Cargo.toml
rust/react/: Cargo.toml
rust/say/: Cargo.toml
rust/xorcism/: Cargo.toml
(+29 files in other folders)
