[workspace]
members = [
    "accumulate",
    "acronym",
    "armstrong-numbers",
    "beer-song",
    "book-store",
    "circular-buffer",
    "clock",
    "difference-of-squares",
    "dot-dsl",
    "etl",
    "forth",
    "gigasecond",
    "grains",
    "hello-world",
    "leap",
    "macros",
    "minesweeper",
    "nth-prime",
    "ocr-numbers",
    "paasio",
    "parallel-letter-frequency",
    "poker",
    "prime-factors",
    "proverb",
    "raindrops",
    "react",
    "reverse-string",
    "sum-of-multiples",
    "xorcism",
]
